--- a/site/src/app.html
+++ b/site/src/app.html
@@ -1,12 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Create Svelte Docs Theme</title>
+    <meta
+      name="description"
+      content="Create Svelte Docs Theme - Easily generate professional-grade documentation for your Svelte projects."
+    />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+    <meta property="og:title" content="Create Svelte Docs Theme" />
+    <meta
+      property="og:description"
+      content="Easily generate professional-grade documentation for your Svelte projects."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
